--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -1,1 +1,13 @@
 manager.panel.search=Search Bookmark
+help.settings=Settings:
+help.others=Others:
+help.delete=Delete:
+help.addUpdate=Add/Edit:
+bookmark.windows.create=Create Bookmark
+bookmark.windows.edit=Edit Bookmark
+bookmark.windows.name=Bookmark Name:
+bookmark.windows.desc=Bookmark Description:
+bookmark.windows.lineNum=Bookmark Line Number:
+bookmark.windows.input.place.text=Input bookmark text
+bookmark.windows.input.place.desc=Input bookmark description
+
