--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -1,1 +1,12 @@
-manager.panel.search=搜索书签
+manager.panel.search=搜索书签:
+help.settings=设置:
+help.others=其他:
+help.delete=删除:
+help.addUpdate=新增/更新:
+bookmark.windows.create=新建书签
+bookmark.windows.edit=编辑书签
+bookmark.windows.name=书签名称:
+bookmark.windows.desc=描述:
+bookmark.windows.lineNum=行号:
+bookmark.windows.input.place.text=输入书签文本
+bookmark.windows.input.place.desc=输入书签描述
