--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -10,3 +10,7 @@ bookmark.windows.desc=描述:
 bookmark.windows.lineNum=行号:
 bookmark.windows.input.place.text=输入书签文本
 bookmark.windows.input.place.desc=输入书签描述
+
+setting.general.tipLabel=选中提示类型:
+setting.general.tipItem1=提示框
+setting.general.tipItem2=窗口
