--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -11,3 +11,5 @@ bookmark.windows.lineNum=Bookmark Line Number:
 bookmark.windows.input.place.text=Input bookmark text
 bookmark.windows.input.place.desc=Input bookmark description
 
+help.document.delete=mark line hit mouse right (ShortKey: Alt+shift+D)
+help.document.ae=mark line hit mouse right (ShortKey: Alt+shift+A)
