--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -1,3 +1,5 @@
+exception.project.notOpen=项目未打开
+exception.project.initializeFail=BookmarkPro插件初始化失败:
 manager.panel.search=搜索书签:
 help.settings=设置:
 bookmark.windows.create=新建书签
