--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -1,15 +1,33 @@
+exception.project.initializeFail=BookmarkPro initialization failed:
 manager.panel.search=Search Bookmark
+# 设置
+setting.general.tipLabel=Tips:
+# 创建书签Windows
+bookmark.windows.create=CreateBookmark
+bookmark.windows.edit=EditBookmark
+bookmark.windows.name=BookmarkName:
+bookmark.windows.desc=Describe:
+bookmark.windows.lineNum=LineNumber:
+bookmark.windows.input.place.text=Input bookmark text
+bookmark.windows.input.place.desc=Input bookmark description
+bookmark.windows.mark.as.group=Bookmark can be used as group
+bookmark.windows.invalid=Invalid Bookmark
+bookmark.windows.warning=Bookmark Warning:
+bookmark.windows.mark.line.limit=Bookmark Line Limit:
+bookmark.windows.mark.line.max=The bookmark Line number max is: 
+bookmark.windows.parent=Group with bookmark:
+bookmark.windows.mark.enable.group=Bookmark Enable Group:
+# 帮助-标题
+help.title=Help
+help.general=GeneralSettings:
 help.settings=Settings:
 help.others=Others:
 help.delete=Delete:
 help.addUpdate=Add/Edit:
-bookmark.windows.create=Create Bookmark
-bookmark.windows.edit=Edit Bookmark
-bookmark.windows.name=Bookmark Name:
-bookmark.windows.desc=Bookmark Description:
-bookmark.windows.lineNum=Bookmark Line Number:
-bookmark.windows.input.place.text=Input bookmark text
-bookmark.windows.input.place.desc=Input bookmark description
-
+# 帮助-说明
 help.document.delete=mark line hit mouse right (ShortKey: Alt+shift+D)
 help.document.ae=mark line hit mouse right (ShortKey: Alt+shift+A)
+# 启动通知
+start.notice.feedback=Feedback
+start.notice.appraise=Appraise
+start.notice.message=Thanks for using bookmark pro.
