--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -1,7 +1,8 @@
-exception.project.notOpen=项目未打开
 exception.project.initializeFail=BookmarkPro插件初始化失败:
 manager.panel.search=搜索书签:
-help.settings=设置:
+# 设置
+setting.general.tipLabel=选中提示类型:
+# 创建书签Windows
 bookmark.windows.create=新建书签
 bookmark.windows.edit=编辑书签
 bookmark.windows.name=书签名称:
@@ -9,11 +10,24 @@ bookmark.windows.desc=描述:
 bookmark.windows.lineNum=行号:
 bookmark.windows.input.place.text=输入书签文本
 bookmark.windows.input.place.desc=输入书签描述
-setting.general.tipLabel=选中提示类型:
-setting.general.tipItem1=提示框
-setting.general.tipItem2=窗口
+bookmark.windows.mark.as.group=可以用于分组
+bookmark.windows.invalid=书签已失效
+bookmark.windows.warning=警告:
+bookmark.windows.mark.line.limit=书签标记行限制:
+bookmark.windows.mark.line.max=书签标记的最大行:
+bookmark.windows.parent=书签所属分组:
+bookmark.windows.mark.enable.group=将书签用作分组:
+# 帮助-标题
+help.title=帮助
+help.general=设置:
+help.settings=设置:
 help.others=其他:
 help.delete=删除:
 help.addUpdate=新增/更新:
+# 帮助-说明
 help.document.delete=快捷键: Alt+shift+D
 help.document.ae=标记行右键(快捷键: Alt+shift+A)
+# 启动通知
+start.notice.feedback=反馈
+start.notice.appraise=点赞
+start.notice.message=感谢使用BookmarkPro插件.
