--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -1,7 +1,5 @@
 exception.project.initializeFail=BookmarkPro initialization failed:
 manager.panel.search=Search Bookmark
-# 设置
-setting.general.tipLabel=Tips:
 # 创建书签Windows
 bookmark.windows.create=CreateBookmark
 bookmark.windows.edit=EditBookmark
@@ -31,3 +29,5 @@ help.document.ae=mark line hit mouse right (ShortKey: Alt+shift+A)
 start.notice.feedback=Feedback
 start.notice.appraise=Appraise
 start.notice.message=Thanks for using bookmark pro.
+# 提示
+tips.not.desc=Bookmarks no description
