--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -1,7 +1,5 @@
 exception.project.initializeFail=BookmarkPro插件初始化失败:
 manager.panel.search=搜索书签:
-# 设置
-setting.general.tipLabel=选中提示类型:
 # 创建书签Windows
 bookmark.windows.create=新建书签
 bookmark.windows.edit=编辑书签
@@ -31,3 +29,5 @@ help.document.ae=标记行右键(快捷键: Alt+shift+A)
 start.notice.feedback=反馈
 start.notice.appraise=点赞
 start.notice.message=感谢使用BookmarkPro插件.
+# 提示
+tips.not.desc=书签没有描述信息
