--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -15,8 +15,12 @@ bookmark.windows.mark.line.limit=Bookmark Line Limit:
 bookmark.windows.mark.line.max=The bookmark Line number max is: 
 bookmark.windows.parent=Group with bookmark:
 bookmark.windows.mark.enable.group=Bookmark Enable Group:
-# 帮助-标题
+# 书签面板菜单
+export.title=Export
+import.title=Import
+issue.title=Issue
 help.title=Help
+# 帮助-标题
 help.general=GeneralSettings:
 help.settings=Settings:
 help.others=Others:
