--- a/src/main/resources/i18n/i18n_zh.properties
+++ b/src/main/resources/i18n/i18n_zh.properties
@@ -15,8 +15,12 @@ bookmark.windows.mark.line.limit=书签标记行限制:
 bookmark.windows.mark.line.max=书签标记的最大行:
 bookmark.windows.parent=书签所属分组:
 bookmark.windows.mark.enable.group=将书签用作分组:
-# 帮助-标题
+# 书签面板菜单
+export.title=导出
+import.title=导入
+issue.title=问题
 help.title=帮助
+# 帮助-标题
 help.general=设置:
 help.settings=设置:
 help.others=其他:
